Add run_id param to list messages endpoint